--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Catwalk App</title>
-</head>
+  <head>
+    <title>Catwalk App</title>
+  </head>
 <body>
-<div id="app"></div>
-<script type="text/javascript" src="bundle.js"></script>
+  <div id="app">
+    if this shows your react app is broken
+  </div>
+  <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
