updated README, added css file and updated starter components

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Catwalk App</title>
+    <link rel='stylsheet' href='./style.css'>
   </head>
 <body>
   <div id="app">
