--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   <div id="app">
     if this shows your react app is broken
   </div>
-  <script type="text/javascript" src="bundle.js"></script>
+  <script type="text/javascript" src="/bundle.js"></script>
 </body>
 </html>
